--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
           - target: x86_64-pc-windows-gnu
             archive: zip
           - target: x86_64-unknown-linux-musl
-            archive: tar.gz tar.xz tar.zst
+            archive: zip
           - target: x86_64-apple-darwin
             archive: zip
     steps:
@@ -27,5 +27,6 @@ jobs:
           TOOLCHAIN_VERSION: 1.81.0
         with:
           RUSTTARGET: ${{ matrix.target }}
+          STATIC_LINKING: false
           ARCHIVE_TYPES: ${{ matrix.archive }}
           EXTRA_FILES: "README.md config.json rules/disks.example"
