another workflow test

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -99,14 +99,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Build binary
-        uses: houseabsolute/actions-rust-cross@v0
+        uses: houseabsolute/actions-rust-cross@v1
         with:
-          command: ${{ matrix.platform.command }}
+          command: "build"
           target: ${{ matrix.platform.target }}
-          args: "--locked --release"
+          toolchain: ${{ matrix.toolchain }}
+          args:
+            "--locked --release"
           strip: true
       - name: Publish artifacts and release
         uses: houseabsolute/actions-rust-release@v0
         with:
-          executable-name: eekWatch
+          executable-name: ubi
           target: ${{ matrix.platform.target }}
