--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,30 +1,63 @@
-# .github/workflows/release.yml
+name: Rust
 
 on:
   release:
     types: [ created ]
 
+env:
+  CARGO_TERM_COLOR: always
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
-  release:
-    name: release ${{ matrix.target }}
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ${{ matrix.runner }}
     strategy:
-      fail-fast: false
       matrix:
         include:
-          - target: x86_64-pc-windows-gnu
-            archive: zip
-          - target: x86_64-unknown-linux-musl
-            archive: zip
+          - name: Linux-amd64
+            runner: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            command: cross
+          - name: Linux-aarch64
+            runner: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            command: cross
+          - name: Windows-x86_64
+            runner: windows-latest
+            target: x86_64-pc-windows-gnu
+            command: cross
+          - name: FreeBSD-x86_64
+            runner: ubuntu-latest
+            target: x86_64-unknown-freebsd
+            command: cross
+          # cargo
+          - name: MacOs-aarch64
+            runner: macOS-latest
+            target: aarch64-apple-darwin
+            command: cargo
+          - name: MacOS-x86_64
+            runner: macOS-latest
+            target: x86_64-apple-darwin
+            command: cargo
+
     steps:
-      - uses: actions/checkout@master
-      - name: Compile and release
-        uses: rust-build/rust-build.action@v1.4.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TOOLCHAIN_VERSION: 1.81.0
-        with:
-          RUSTTARGET: ${{ matrix.target }}
-          STATIC_LINKING: false
-          ARCHIVE_TYPES: ${{ matrix.archive }}
-          EXTRA_FILES: "README.md config.json rules/disks.example"
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Cache
+        uses: Swatinem/rust-cache@v2
+
+      # Only install cross if we need it
+      # Install via cargo-binstall which I found faster
+      - name: Install Cross
+        if: matrix.command == 'cross'
+        shell: bash
+        run: |
+          curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
+          cargo binstall --no-confirm cross
+
+      - name: Build Binary
+        run: ${{ matrix.command }} build --verbose --locked --release --target ${{ matrix.target }}
+
+
+      
