--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,14 +31,14 @@ jobs:
             target: x86_64-unknown-freebsd
             command: cross
           # cargo
-          - name: MacOs-aarch64
-            runner: macOS-latest
-            target: aarch64-apple-darwin
-            command: cargo
-          - name: MacOS-x86_64
-            runner: macOS-latest
-            target: x86_64-apple-darwin
-            command: cargo
+    #          - name: MacOs-aarch64
+    #            runner: macOS-latest
+    #            target: aarch64-apple-darwin
+    #            command: cargo
+    #          - name: MacOS-x86_64
+    #            runner: macOS-latest
+    #            target: x86_64-apple-darwin
+    #            command: cargo
 
     steps:
       - name: Checkout
@@ -57,7 +57,7 @@ jobs:
           cargo binstall --no-confirm cross
 
       - name: Build Binary
-        run: ${{ matrix.command }} build --verbose --locked --release --target ${{ matrix.target }}
+        run: ${{ matrix.command }} build --verbose --release --target ${{ matrix.target }}
 
 
       
