--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,8 +1,8 @@
 name: Rust
 
-on:
-  release:
-    types: [ created ]
+on: [ push ]
+#  release:
+#    types: [ created ]
 
 env:
   CARGO_TERM_COLOR: always
