--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,7 @@ jobs:
             runner: windows-latest
             target: x86_64-pc-windows-msvc
             command: cross
+            openssl: false
           - name: FreeBSD-x86_64
             runner: ubuntu-latest
             target: x86_64-unknown-freebsd
@@ -48,6 +49,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Install libssl-dev
+        if: matric.openssl != 'false'
         run: |
           sudo apt-get install libssl-dev
 
