--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,10 +18,12 @@ jobs:
             runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             command: cross
+            openssl: true
           - name: Linux-aarch64
             runner: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             command: cross
+            openssl: true
           - name: Windows-x86_64
             runner: windows-latest
             target: x86_64-pc-windows-msvc
@@ -31,6 +33,7 @@ jobs:
             runner: ubuntu-latest
             target: x86_64-unknown-freebsd
             command: cross
+            openssl: true
           # cargo
     #          - name: MacOs-aarch64
     #            runner: macOS-latest
@@ -49,7 +52,8 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Install libssl-dev
-        if: matrix.openssl != 'false'
+        if: matrix.openssl == 'true'
+        shell: bash
         run: |
           sudo apt-get install libssl-dev
 
