--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,22 +18,21 @@ jobs:
             runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             command: cross
-            openssl: true
+            feature: openssl
           - name: Linux-aarch64
             runner: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             command: cross
-            openssl: true
+            feature: openssl
           - name: Windows-x86_64
             runner: windows-latest
             target: x86_64-pc-windows-msvc
             command: cross
-            openssl: false
           - name: FreeBSD-x86_64
             runner: ubuntu-latest
             target: x86_64-unknown-freebsd
             command: cross
-            openssl: true
+            feature: openssl
           # cargo
     #          - name: MacOs-aarch64
     #            runner: macOS-latest
@@ -51,11 +50,9 @@ jobs:
       - name: Setup Cache
         uses: Swatinem/rust-cache@v2
 
-      - name: Install libssl-dev
-        if: matrix.platform.openssl == true
-        shell: bash
-        run: |
-          sudo apt-get install libssl-dev openssl-dev
+      - name: Install OpenSSL
+        if: matrix.feature == 'openssl'
+        run: sudo apt-get update --yes && sudo apt-get install --yes pkg-config openssl libssl-dev
 
       # Only install cross if we need it
       # Install via cargo-binstall which I found faster
