--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Install OpenSSL
         if: matrix.feature == 'openssl'
-        run: sudo apt-get update --yes && sudo apt-get install --yes pkg-config openssl libssl-dev
+        run: sudo apt-get update --yes && sudo apt-get install --yes librust-openssl-sys-dev
 
       # Only install cross if we need it
       # Install via cargo-binstall which I found faster
