--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,12 +15,12 @@ jobs:
       matrix:
         include:
           - name: Linux-amd64
-            runner: ubuntu-latest
+            runner: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             command: cross
             feature: openssl
           - name: Linux-aarch64
-            runner: ubuntu-latest
+            runner: ubuntu-22.04
             target: aarch64-unknown-linux-gnu
             command: cross
             feature: openssl
@@ -29,7 +29,7 @@ jobs:
             target: x86_64-pc-windows-msvc
             command: cross
           - name: FreeBSD-x86_64
-            runner: ubuntu-latest
+            runner: ubuntu-22.04
             target: x86_64-unknown-freebsd
             command: cross
             feature: openssl
@@ -52,7 +52,7 @@ jobs:
 
       - name: Install OpenSSL
         if: matrix.feature == 'openssl'
-        run: sudo apt-get update --yes && sudo apt-get install --yes librust-openssl-sys-dev
+        run: sudo apt-get update --yes && sudo apt-get install --yes pkg-config openssl libssl-dev
 
       # Only install cross if we need it
       # Install via cargo-binstall which I found faster
