--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,6 +7,7 @@ on: [ push ]
 env:
   CARGO_TERM_COLOR: always
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  OPENSSL_DIR: /usr/include/openssl
 
 jobs:
   build:
@@ -53,9 +54,6 @@ jobs:
       - name: Install OpenSSL
         if: matrix.feature == 'openssl'
         run: sudo apt-get update --yes && sudo apt-get install --yes pkg-config openssl libssl-dev
-
-      - name: Debug
-        run: sudo apt-file list libssl-dev
 
       # Only install cross if we need it
       # Install via cargo-binstall which I found faster
