--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -60,9 +60,9 @@ jobs:
         run: sudo apt-get update --yes && sudo apt-get install --yes pkg-config libssl-dev musl-dev
       #        run: apk add --no-cache curl clang cmake libxml2-dev openssl-dev musl-fts-dev bsd-compat-headers
 
-      #      - name: Debug
-      #        if: matrix.feature == 'openssl'
-      #        run: openssl version -d && printenv
+      - name: Debug
+        if: matrix.feature == 'openssl'
+        run: pkg-config --variable pc_path pkg-config && printenv
 
       # Only install cross if we need it
       # Install via cargo-binstall which I found faster
