--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,7 @@ env:
   OPENSSL_DIR: /usr/lib/ssl
   OPENSSL_INCLUDE_DIR: /usr/include/openssl
   OPENSSL_LIB_DIR: /usr/lib/x86_64-linux-gnu
-  PKG_CONFIG_PATH: /usr/local/lib/x86_64-linux-gnu/pkgconfig:/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig:/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig:/usr/lib/ssl/pkgconfig
+  PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/miniconda/lib/pkgconfig:/usr/share/miniconda/pkgs/openssl-3.0.15-h5eee18b_0/lib/pkgconfig
 
 jobs:
   build:
@@ -62,8 +62,7 @@ jobs:
 
       - name: Debug
         if: matrix.feature == 'openssl'
-        #        run: pkg-config --variable pc_path pkg-config && printenv
-        run: find / -name openssl.pc
+        run: pkg-config --variable pc_path pkg-config && printenv
 
       # Only install cross if we need it
       # Install via cargo-binstall which I found faster
