--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -75,6 +75,11 @@ jobs:
 
       - name: Build Binary
         run: ${{ matrix.command }} build --verbose --release --target ${{ matrix.target }}
+        env:
+          OPENSSL_DIR: /usr/lib/ssl
+          OPENSSL_INCLUDE_DIR: /usr/include/openssl
+          OPENSSL_LIB_DIR: /usr/lib/x86_64-linux-gnu
+          PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/miniconda/lib/pkgconfig:/usr/share/miniconda/pkgs/openssl-3.0.15-h5eee18b_0/lib/pkgconfig
 
 
       
